[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/dialogue/dialogue_manager.gd" type="Script" id=1]
[ext_resource path="res://ui/theme/panel2.png" type="Texture" id=2]
[ext_resource path="res://ui/theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/theme/dogicapixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/theme/scrollbar.png" type="Texture" id=5]
[ext_resource path="res://ui/theme/dogicapixelbold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ui/theme/focus.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 8
extra_spacing_bottom = 1
extra_spacing_space = -1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 1.0
margin_right = 1.0
margin_top = 1.0
margin_bottom = 1.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="DynamicFont" id=4]
size = 8
extra_spacing_top = -3
extra_spacing_bottom = -2
extra_spacing_char = -1
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 1.0
margin_right = 1.0
margin_top = 1.0
margin_bottom = 1.0

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 125, 40 ), Vector2( 125, 42 ) ]
}

[node name="dialogue_manager" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="DialogueUI" type="NinePatchRect" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -49.0
margin_right = -3.0
margin_bottom = -3.0
theme = ExtResource( 3 )
texture = ExtResource( 2 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueText" type="RichTextLabel" parent="DialogueUI"]
margin_left = 9.0
margin_top = 15.0
margin_right = 243.0
margin_bottom = 39.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "This is Row 1
This is Row 3
This is Row 3"
visible_characters = 0
percent_visible = 0.0
text = "This is Row 1
This is Row 3
This is Row 3"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueName" type="RichTextLabel" parent="DialogueUI"]
margin_left = 9.0
margin_top = 6.0
margin_right = 240.0
margin_bottom = 14.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Name:"
text = "Name:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceBox" type="NinePatchRect" parent="DialogueUI"]
margin_left = 185.0
margin_top = -33.0
margin_right = 249.0
margin_bottom = -1.0
texture = ExtResource( 2 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="DialogueUI/ChoiceBox"]
margin_left = 5.23535
margin_top = 5.67647
margin_right = 59.691
margin_bottom = 15.6765
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
button_mask = 0
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="DialogueUI/ChoiceBox"]
margin_left = 5.23535
margin_top = 15.6765
margin_right = 59.691
margin_bottom = 25.6765
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 4 )
button_mask = 0
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next-indicator" type="Sprite" parent="DialogueUI"]
position = Vector2( 125, 40 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueUI/next-indicator"]
autoplay = "next-indicator"
anims/next-indicator = SubResource( 6 )

[node name="Tween" type="Tween" parent="DialogueUI"]
[connection signal="tween_all_completed" from="DialogueUI/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_step" from="DialogueUI/Tween" to="." method="_on_Tween_tween_step"]
